# ehr_deidentification

./: .gitignore  .gitmodules  .zenodo.json  AnnotationGuidelines.md  LICENSE  MANIFEST.in  README.md  deid.yml  deid_cpu.yml  prodigy.yml  requirements.txt  setup.cfg
data/ner_datasets/: test.jsonl
data/notes/: deid.jsonl  notes.jsonl
data/predictions/: predictions.jsonl
i2b2_parsing/: data_2014.py
i2b2_parsing/parsing/: __init__.py  phi_parser.py  tar_members.py
i2b2_parsing/tags/: __init__.py  tag_map.py
src/robust_deid/data_processing/: __init__.py  data_loader.py
src/robust_deid/deid/: __init__.py  text_deid.py  utils.py
src/robust_deid/ner_datasets/: __init__.py  dataset_creator.py  dataset_splitter.py  span_fixer.py  span_validation.py
src/robust_deid/ner_datasets/dataset_builder/: __init__.py  dataset.py  sentence_dataset.py
src/robust_deid/ner_datasets/distribution/: __init__.py  dataset_splits.py  ner_distribution.py  print_distribution.py
src/robust_deid/ner_datasets/preprocessing/: __init__.py  preprocessing_loader.py
src/robust_deid/sequence_tagging/: __init__.py  recall_thresholder.py  sequence_tagger.py
src/robust_deid/sequence_tagging/arguments/: __init__.py  data_training_arguments.py  evaluation_arguments.py  model_arguments.py
src/robust_deid/sequence_tagging/dataset_builder/: __init__.py  dataset_tokenizer.py  label_mapper.py  ner_dataset.py  ner_labels.py
src/robust_deid/sequence_tagging/evaluation/: __init__.py  metrics_compute.py
src/robust_deid/sequence_tagging/note_aggregate/: __init__.py  note_level_aggregator.py
steps/evaluation/: Evaluation.ipynb  evaluation.sh
steps/evaluation/run/i2b2/: eval_i2b2.json
steps/forward_pass/: Forward Pass.ipynb  forward_pass.sh
steps/forward_pass/run/i2b2/: predict_i2b2.json
steps/forward_pass/run/models/: all_results.json
steps/recall_threshold/: RecallThreshold.ipynb  recall_threshold.sh
steps/recall_threshold/run/i2b2/: eval_max_i2b2.json  eval_sum_i2b2.json  logits_i2b2.json  predict_max_i2b2.json  predict_sum_i2b2.json
steps/train/: Train.ipynb  train.sh
steps/train/run/i2b2/: train_i2b2.json
(+38 files in other folders)
