# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = robust_deid
version = 0.1.0
description = A package to remove private information (PHI/PII) from medical notes.
author = Prajwal Kailas, Max Homilius, Shinichi Goto
author_email = prajwal967@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/obi-ml-public/ehr_deidentification
project_urls =
    Bug Tracker = https://github.com/obi-ml-public/ehr_deidentification/issues
    Demo = https://huggingface.co/spaces/obi/Medical-Note-Deidentification
    OBI-RoBERTa De-ID = https://huggingface.co/obi/deid_roberta_i2b2
    OBI-ClinicalBERT De-ID Model = https://huggingface.co/obi/deid_bert_i2b2
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
keywords = ehr deidentification medical phi transformers nlp ner

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
python_requires = >=3.7

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts = 
    load_data = robust_deid.data_processing.data_loader:main
    fix_spans = robust_deid.ner_datasets.span_fixer:main
    validation_spans = robust_deid.ner_datasets.span_validation:main
    split_data = robust_deid.ner_datasets.dataset_splitter:main
    create_data = robust_deid.ner_datasets.dataset_creator:main
    tag_sequence = robust_deid.sequence_tagging.sequence_tagger:main
    threshold_recall = robust_deid.sequence_tagging.recall_thresholder:main
    deid_text = robust_deid.deid.text_deid:main

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1